--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -22,4 +22,9 @@
           </tr>
       </tbody>
   </table>
+
+  <div class="buttons-container">
+      <button mat-raised-button color="warn" routerLink="/cart">Ver carrito</button>
+      <button mat-raised-button color="primary" routerLink="/">inicio</button>
+  </div>
 </div>
