--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -24,6 +24,13 @@
 
       </button>
 
+      <button mat-raised-button color="wram" routerLink="/about">
+
+        Sobre nosostros
+
+      </button>
+
+
     </mat-card-actions>
 
   </mat-card>
